# ML_Project

./: .gitattributes  .gitignore  README.md  Report.md  Report_Zellinger_Salminger_Parzmair.html  Report_Zellinger_Salminger_Parzmair.ipynb  evaluation.py  hybrid_cv_results.csv  pyproject.toml  result_gesamt.csv
pip_A_text/: train_val_text.py
pipe_A_text/: evaluate_results.py  results_saver.py  train_val_text.py
pipe_A_text/results/: LinearSVC_C1.0_class_metrics.csv  LinearSVC_C1_class_metrics.csv  all_results_text_models.csv  cv_results.csv  derived_metrics_from_cm.csv  log_24_01_26.txt  model_scores_macro.csv  test_class_report_LinearSVC_C1.0.csv
pipe_B_yolo/: extracted_features.py  json_to_csv.py  train_rf.py  train_val_models_layout.py  train_yolo.py
pipe_B_yolo/results/: 20260101_rf_300.txt  cv_results_layout.csv  test_class_report_RF_n200_d30.csv  test_results_layout.csv  val_results_layout.csv
pipe_B_yolo_direct/: train_yolo.py
pipe_C_hybrid/: train_hybrid.py  train_rf_hybrid.py
pipe_C_hybrid/results/: 20260101_rf_300_logreg_2000.txt  cv_results_hybrid.csv  log_11_01_26_hybrid.txt  log_24_01_26  test_class_report_LinearSVC_C0.5.csv  test_results_hybrid.csv  val_results_hybrid.csv
pipe_D_yolo_direct/: generate_docclass_labels.py  train_yolo.ipynb
runs/: logging_31.12.2025.txt
runs/layout/doclaynet_yolov8ln960/: args.yaml  (+1 more)
runs_docclass/detect/: log_10_01_206_test.txt
runs_docclass/yolov8n_docclass_fullpage12/: args.yaml  results.csv
scripts/: check_class_distro_text_df.py  prepare_core_yolo.py  prepare_data.py  prepare_extra_text.py
(+4 files in other folders)
