[project]
name = "doclaynet-ml-project"
version = "0.1.0"
description = "Multimodal document classification pipelines for DocLayNet (text, layout, hybrid)"
requires-python = ">=3.12"

# --------------------------------------------------
# Base dependencies (data preparation only)
# --------------------------------------------------
dependencies = [
    "tqdm==4.66.4"
]

# --------------------------------------------------
# Optional dependency profiles
# --------------------------------------------------
[project.optional-dependencies]

# Pipeline A: Text-based ML (TF-IDF / Embeddings)
core = [
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scikit-learn==1.4.2",
    "xgboost==2.0.3",
    "sentence-transformers==2.6.1"
]

# Pipeline B + C: Layout-based vision + hybrid models
vision = [
    "ultralytics==8.2.25",
    "opencv-python==4.9.0.80",
    "pillow==10.3.0",
    "albumentations==1.4.6"
]

# Development / experimentation
dev = [
    "jupyterlab==4.1.8",
    "ipykernel==6.29.4",
    "matplotlib==3.9.0",
    "seaborn==0.13.2",
    "black==24.4.2",
    "ruff==0.4.4",
    "pytest==8.2.2"
]
